# examy

./: .gitignore  pyproject.toml
.github/workflows/: python_ci.yml
examy/fetchers/new_web_layout/: optimized.py
examy/fetchers/new_web_layout/utils/: process_html.py  webpage_actions.py
examy/models/: ExamDescriptor.py  ExamReport.py  Ranking.py  Student.py  TestDescriptor.py  TestResult.py  fetcher.py
examy/utils/: export.py  manager.py
